<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="vm"
    type="com.example.tabcash.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/vector_left"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="65dp"
            app:layout_constraintBottom_toTopOf="@id/vector_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_vector_left" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/vector_right"
            android:layout_width="40dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toTopOf="@id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vector_left"
            app:srcCompat="@drawable/ic_vector_right" />

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Remember_Me_Style"
            android:fontFamily="@font/poppins_medium"
            android:textSize="@dimen/_32sp"
            android:layout_marginTop="43dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintBottom_toTopOf="@id/text_wellcome_message"
            android:text="@string/login" />

        <TextView
            android:id="@+id/text_wellcome_message"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:text="@string/wellcome_message"
            android:textColor="@color/gray_500"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toTopOf="@id/input_layout_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_sign_up" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vector_right"
            android:text="@string/tab_cash" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wellcome_message"
            error="@{vm.emailError}">

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:backgroundTint="@color/white"
                android:text="@={vm.email}"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name"
            error="@{vm.passwordError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text="@={vm.password}"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/check_rememberMe"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:gravity="start|center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

        <TextView
            android:id="@+id/text_remember_me"
            style="@style/Remember_Me_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:text="@string/remember_me"
            app:layout_constraintStart_toEndOf="@id/check_rememberMe"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

        <TextView
            android:id="@+id/text_forget_password"
            style="@style/Remember_Me_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32dp"
            android:text="@string/forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password" />

        <Button
            android:id="@+id/button_sign_up"
            style="@style/Button_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingVertical="12dp"
            android:text="@string/login"
            android:onClick="@{()->vm.login()}"
            app:layout_constraintTop_toBottomOf="@id/text_remember_me" />

        <TextView
            android:id="@+id/text_not_have_account"
            style="@style/Remember_Me_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:textColor="@color/gray_500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sign_up"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/login"
            style="@style/Remember_Me_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="@{()->vm.gotoRegister()}"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_not_have_account"
            app:layout_constraintTop_toBottomOf="@id/button_sign_up" />

        <View
            android:id="@+id/line"
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:background="@color/purple_500"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.78"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>