<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.tabcash.ui.login.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/vector_left"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginTop="45dp"
            app:layout_constraintBottom_toTopOf="@id/vector_right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_vector_left" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/vector_right"
            android:layout_width="40dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toTopOf="@id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vector_left"
            app:srcCompat="@drawable/ic_vector_right" />

        <TextView
            android:id="@+id/text_sign_up"
            style="@style/Remember_Me_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textSize="@dimen/_32sp"
            app:layout_constraintBottom_toTopOf="@id/text_wellcome_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name" />

        <TextView
            android:id="@+id/text_wellcome_message"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/wellcome_message"
            android:textColor="@color/gray_500"
            android:textSize="@dimen/_16sp"
            app:layout_constraintBottom_toTopOf="@id/input_layout_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_sign_up" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/tab_cash"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vector_right" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/TextInputLayout"
            error="@{vm.nameError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_wellcome_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name_register"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.name}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_mobile_number"
            style="@style/TextInputLayout"
            error="@{vm.phoneError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="@dimen/_8dp"
            android:hint="@string/mobile_number"
            app:layout_constraintBottom_toTopOf="@id/input_layout_email_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_mobile_number"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.phone}"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_email_register"
            style="@style/TextInputLayout"
            error="@{vm.emailError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="@dimen/_8dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@id/input_layout_password_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_id_number"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_confirm_password"
            style="@style/TextInputLayout"
            error="@{vm.confirmPasswordError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="@dimen/_8dp"
            android:hint="@string/confirm_password"
            app:layout_constraintBottom_toTopOf="@id/button_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_password_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_confirm_password"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.confirmPassword}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_password_register"
            style="@style/TextInputLayout"
            error="@{vm.passwordError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_32dp"
            android:layout_marginTop="@dimen/_8dp"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@id/input_layout_confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_email_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password_register"
                style="@style/TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={vm.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_sign_up"
            style="@style/Button_Style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="@{()->vm.register()}"
            android:paddingVertical="10dp"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/input_layout_confirm_password" />

        <TextView
            android:id="@+id/text_already_have_account"
            style="@style/Remember_Me_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1000dp"
            android:text="@string/already_have_acount"
            android:textColor="@color/gray_500"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_sign_up"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/login"
            style="@style/Remember_Me_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{()->vm.goToLogin()}"
            android:text="@string/login"
            android:textColor="@color/purple_500"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_already_have_account"
            app:layout_constraintTop_toBottomOf="@id/button_sign_up" />

        <View
            android:id="@+id/line"
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:background="@color/purple_500"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>